--- a/src/ml_models/model_config.json
+++ b/src/ml_models/model_config.json
@@ -1,20 +1,47 @@
 {
-    "CONTEXT_LENGTH": 30,
-    "PREDICTION_LENGTH": 1,
-    "LAGS_SEQUENCE": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-    ],
-    "D_MODEL": 32,
-    "ENCODER_LAYERS": 2,
-    "DECODER_LAYERS": 2,
-    "ENCODER_ATTENTION_HEADS": 4,
-    "DECODER_ATTENTION_HEADS": 4,
-    "DROPOUT": 0.1,
-    "NUM_TIME_FEATURES": 4
+  "activation_dropout": 0.1,
+  "activation_function": "gelu",
+  "attention_dropout": 0.1,
+  "cardinality": [
+    0
+  ],
+  "context_length": 30,
+  "d_model": 32,
+  "decoder_attention_heads": 4,
+  "decoder_ffn_dim": 64,
+  "decoder_layerdrop": 0.1,
+  "decoder_layers": 2,
+  "distribution_output": "student_t",
+  "dropout": 0.1,
+  "embedding_dimension": [
+    0
+  ],
+  "encoder_attention_heads": 4,
+  "encoder_ffn_dim": 64,
+  "encoder_layerdrop": 0.1,
+  "encoder_layers": 2,
+  "feature_size": 13,
+  "init_std": 0.02,
+  "input_size": 1,
+  "is_encoder_decoder": true,
+  "lags_sequence": [
+    1,
+    2,
+    3,
+    4,
+    5,
+    6,
+    7
+  ],
+  "loss": "nll",
+  "model_type": "time_series_transformer",
+  "num_dynamic_real_features": 0,
+  "num_parallel_samples": 100,
+  "num_static_categorical_features": 0,
+  "num_static_real_features": 0,
+  "num_time_features": 4,
+  "prediction_length": 1,
+  "scaling": "mean",
+  "transformers_version": "4.53.2",
+  "use_cache": true
 }
