feat: Add historical market data for backtesting
Upload comprehensive dataset including USDCHF, EURUSD, Gold, Silver, and other major instruments for strategy validation.

 On branch main
 Changes to be committed:
	modified:   .gitignore
	deleted:    REPORTE_EJECUTIVO_ATR_OPTIMIZATION.md
	deleted:    VALIDACION_OPTIMIZACION_FINAL.md
	deleted:    atr_analysis_profundo.py
	deleted:    atr_visualization.py
	new file:   data/AUDUSD_5m_5Yea.csv
	new file:   data/EURJPY_5m_5Yea.csv
	new file:   data/EURUSD_15m_2Mon.csv
	new file:   data/EURUSD_15m_5Yea.csv
	new file:   data/EURUSD_1h_10Yea.csv
	new file:   data/EURUSD_5m_2Mon.csv
	new file:   data/EURUSD_5m_2Yea.csv
	new file:   data/EURUSD_5m_5Yea.csv
	new file:   data/EURUSD_5m_8Yea.csv
	new file:   data/GBPUSD_5m_2Mon.csv
	new file:   data/GBPUSD_5m_5Yea.csv
	new file:   data/SPY_5m_1Yea.csv
	new file:   data/USDCHF_15m_10Yea.csv
	new file:   data/USDCHF_5m_5Yea.csv
	new file:   data/USDJPY_5m_5Yea.csv
	new file:   data/XAGUSD_5m_5Yea.csv
	new file:   data/XAUUSD_5m_1Yea.csv
	new file:   data/XAUUSD_5m_5Yea.csv
	new file:   src/strategies/sunrise_ogle.py
	new file:   src/strategies/sunrise_osiris.py
	modified:   src/strategies/sunrise_simple.py
	modified:   src/strategies/transformer_signal_strategy.py

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ __pycache__/
 *.swp
 
 # Archivos de datos grandes (si decides no versionarlos)
-data/*.csv
+#data/*.csv
 
 # Archivos de credenciales o secretos
 credentials.json
@@ -30,4 +30,4 @@ temp_reports/
 
 
 # Data folder
-data/
+#data/
